# SGBD-C

./: CMakeLists.txt  README.md  functions.h  main.c  master.h
functions/apagarRegistro/: apagarRegistro.c  apagarRegistro.h
functions/apagarTabela/: apagarTabela.c  apagarTabela.h
functions/criarNovaTabela/: criarNovaTabela.c  criarNovaTabela.h
functions/inserirDados/: inserirDados.c  inserirDados.h
functions/lerTabelas/: lerTabelas.c  lerTabelas.h
functions/listarDados/: listarDados.c  listarDados.h
heading/: tables.txt
r/: compile.sh
tables/: 4382.txt  Funcionarios.txt  Lima.txt  adas.txt  dlasld.txt  dqkw.txt  funcionarios.txt  lima.txt  loja de brin.txt  loja.txt  lola.txt  lolja.txt  marina!.txt  moradores.txt  padaria.txt  teste.txt
utils/countCommas/: countCommas.c  countCommas.h
utils/countLines/: countLines.c  countLines.h
utils/createTable/: createTable.c  createTable.h
utils/criarTables/: criarTables.c  criarTables.h
utils/criarTablesDir/: criarTablesDir.c  criarTablesDir.h
utils/openMenu/: openMenu.c  openMenu.h
utils/validateType/: validateType.c  validateType.h
utils/verifyTablesExists/: verifyTablesExists.c  verifyTablesExists.h
